# dynasched

./: .gitignore  LICENSE  README.md  VERSION  dsched.py  make.bat  manifest.txt  pyproject.toml  requirements.txt
.github/: issue_template.md
docs/: conf.py  contributing.rst  getting-help.rst  history.rst  index.rst  install.rst  quickstart.rst  references.bib  release-notes.rst  security.rst  versions.rst
dsched/: dsched.py  server_upcalls.py  setup.py
src/dsched/: __init__.py  dsched.py  fifo.py  hookspecs.py  server_upcalls.py
src/fifo/: fifo.py  setup.py
test/: client.py  server.py
