[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "docs/_build/html/*.html",
  "docs/*.rst",
  "docs/*.bib",
  "docs/*.py",
  "docs/Makefile",
  "docs/make.bat"
]

[project]
name = "DynaSched"
version = "0.0.1"
authors = [
  { name="Ralph Castain", email="rhc@pmix.org"},
]
maintainers = [
  { name="Ralph Castain", email="rhc@pmix.org"},
]
description = "Dynamic scheduler for HPC"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: System :: Systems Administration',
]

[project.urls]
"Homepage" = "https://github.com/dynasched/dynasched"
"Bug Tracker" = "https://github.com/dynasched/dynasched/issues"
